# ASR

./: .gitignore  AGENT.md  README.md  pyproject.toml
.github/workflows/: publish-pypi.yml
docs/superpowers/plans/: 2026-04-10-asr-bootstrap-implementation.md  2026-04-10-provider-windowing-implementation.md  2026-05-01-vad-preprocessing-implementation.md  2026-05-02-tag-driven-release-versioning.md
docs/superpowers/specs/: 2026-04-10-asr-cli-design.md  2026-04-10-provider-windowing-design.md  2026-04-11-asr-command-completion-design.md  2026-04-11-asr-observability-design.md  2026-05-01-vad-preprocessing-design.md  2026-05-02-tag-driven-release-versioning-design.md
src/asr/: __init__.py  __main__.py  cli.py  discovery.py  exporters.py  media.py  models.py  output.py  pipeline.py  vad.py
src/asr/observability/: __init__.py  console.py  events.py  metrics.py  observer.py  timing.py
src/asr/providers/: __init__.py  authority.py  base.py  media_probe.py  quality.py  qwen_mlx.py  window_merge.py  windowing.py
tests/: __init__.py  test_authority.py  test_cli.py  test_discovery.py  test_exporters.py  test_media_probe.py  test_observability.py  test_package.py  test_pipeline.py  test_quality.py  test_qwen_provider_windowed.py  test_vad.py  test_window_merge.py  test_windowing.py
