[build-system]
requires = ["hatchling>=1.27.0", "hatch-vcs>=0.5.0"]
build-backend = "hatchling.build"

[project]
name = "echoalign-asr-mlx"
dynamic = ["version"]
description = "Local CLI for extracting subtitles and aligned timestamps from audio and video."
readme = "README.md"
requires-python = ">=3.14,<3.15"
dependencies = [
  "typer>=0.16,<1.0",
]

[project.optional-dependencies]
mlx = [
  "mlx-audio>=0.3.1",
  "silero-vad>=6.2.1,<7",
]

[project.scripts]
easr = "asr.cli:main"

[tool.hatch.version]
source = "vcs"
tag-pattern = "^v(?P<version>.+)$"

[tool.hatch.build.targets.wheel]
packages = ["src/asr"]
